<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        >

        <TextView
            android:id="@+id/tvAddMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_record"
            android:textSize="32sp"
            android:padding="12sp"
            android:textStyle="bold"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/buttonNewLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_login"
            android:layout_marginTop = "12dp"
            />

        <Button
            android:id="@+id/buttonNewNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_note"
            android:layout_marginTop = "8dp"
            />

        <Button
            android:id="@+id/buttonNewFolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop = "8dp"
            android:text="@string/new_folder"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>