<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.fragment.LoginEditFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".activities.NewLoginActivity">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:padding="4dp"
            android:text="@string/new_login"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="4dp"
            android:text="@string/login"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

        <EditText
            android:id="@+id/etLoginValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="24dp"
            android:padding="4dp"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLogin"
            tools:text="sample login" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="4dp"
            android:text="@string/password"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLoginValue" />

        <EditText
            android:id="@+id/tvPasswordValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:inputType="textPassword"
            android:padding="4dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPassword"
            tools:text="sample password" />

        <TextView
            android:id="@+id/tvPasswordVisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/show_password"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/tvPasswordValue"
            app:layout_constraintTop_toBottomOf="@+id/tvPasswordValue" />

        <Button
            android:id="@+id/buttonSave"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#16000000"
            android:gravity="start|center_vertical"
            android:paddingStart="18dp"
            android:text="@string/save"
            android:textColor="@color/caribbean_swim"
            android:textStyle="bold"
            android:visibility="visible"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tvPasswordVisible"
            app:layout_constraintTop_toBottomOf="@id/tvPasswordVisible" />

        <Button
            android:id="@+id/buttonMove"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#16000000"
            android:gravity="start|center_vertical"
            android:paddingStart="18dp"
            android:text="@string/move"
            android:textColor="@color/caribbean_swim"
            android:textStyle="bold"
            android:visibility="visible"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/buttonSave"
            app:layout_constraintTop_toBottomOf="@id/buttonSave" />


        <Button
            android:id="@+id/buttonShare"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#16000000"
            android:gravity="start|center_vertical"
            android:paddingStart="18dp"
            android:text="@string/share"
            android:textColor="@color/caribbean_swim"
            android:textStyle="bold"
            android:visibility="visible"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/buttonMove"
            app:layout_constraintTop_toBottomOf="@id/buttonMove" />

        <Button
            android:id="@+id/buttonRemove"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:text="@string/remove_record"
            android:textColor="@color/red_oxide"
            android:textSize="14sp"
            android:gravity="start|center_vertical"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@id/buttonShare"
            app:layout_constraintTop_toBottomOf="@id/buttonShare" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>